# jaune

./: .gitignore  Cargo.toml  PLAN.md  README.md  package.json
scripts/: package-grammars.ts  publish.ts  reference-tokens.ts  update-submodules.ts
src/: atom.rs  bundled.rs  bundled_generated.rs  lib.rs  scope.rs  selector.rs  set.rs  syntax.rs  tokenizer.rs
tests/: bundled_feature.rs  fixtures.rs  samples.rs  smoke.rs
tests/common/: mod.rs
tests/fixtures/: c_basic.snap  cpp_basic.snap  csharp_basic.snap  css_basic.snap  go_basic.snap  html_embedded.snap  java_basic.snap  javascript_basic.snap  json_basic.snap  jsx_basic.snap  lua_basic.snap  markdown_embedded.snap  php_basic.snap  python_basic.snap  ruby_basic.snap  rust_basic.snap  scss_basic.snap  shell_basic.snap  sql_basic.snap  swift_basic.snap  toml_basic.snap  tsx_basic.snap  typescript_basic.snap  vue_basic.snap  xml_basic.snap  yaml_basic.snap
tests/samples/: README.md
tests/samples/extra-input/: html.embedded-complex.sample  html.embedded.sample  markdown.embedded.sample
tests/samples/jaune/: abap.sample  ada.sample  ahk2.sample  angular-html.sample  angular-ts.sample  apache.sample  apex.sample  apl.sample  applescript.sample  ara.sample  asciidoc.sample  asm.sample  astro.sample  awk.sample  ballerina.sample  bat.sample  beancount.sample  berry.sample  bibtex.sample  bicep.sample  blade.sample  c3.sample  cadence.sample  cairo.sample  chapel.sample  clarity.sample  clojure.sample  cobol.sample  codeowners.sample  codeql.sample  coffee.sample  common-lisp.sample  cpp.sample  crystal.sample  (+153 more)
(+204 files in other folders)
