[package]
name = "jaune"
description = "Prototype of a fast and lightweight syntax highlighter."
version = "0.1.0"
edition = "2024"

[dependencies]
bimap = "0.6.3"
fancy-regex = "0.17.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
static_assertions = "1.1.0"
thiserror = "2.0.17"
